2004-06-22  David Malcolm  <david@davemalcolm.demon.co.uk>

	* docbook.xds.in: Added envar, based on bug 144739, thanks to Lars Trieloff

2004-06-13  David Malcolm  <david@davemalcolm.demon.co.uk>

	* release.xds: Added <header-info> for <translations> and <translation> elements

2004-06-08  David Malcolm  <dmalcolm@redhat.com>

	* opml.xds: Commented out <external-document-model> element

	* Makefile.am (%.xds): Applied fix for bug 143937 by 
	nshmyrev@yandex.ru (Nickolay V. Shmyrev)
	
2004-06-05  David Malcolm  <david@davemalcolm.demon.co.uk>

	* release.dtd: Added <translations> and <translation> elements

	* release.xds: ditto

2004-05-17 Geert Stappers  <stappers@stappers.nl>

	* dispspec-template.xds: moved to ../templates.

	* Makefile.am: removed that template file from the shipping list.

2004-05-05  Geert Stappers <stappers@stappers.nl>

	* opml.xds

	Replaced < > inside a tag by ' ' to get it valid.

2004-03-04  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* relax-ng.xds

	Renamed <grammar> element; fixed title of <attribute> element.

2004-03-04  Geert Stappers <stappers@stappers.nl>

	* Makefile.am

	Include opml.xds in the project

2004-03-04  Daniel Larsson <Daniel.Larsson@servicefactory.se>

	* opml.xds

	New file

2004-02-20  Geert Stappers <stappers@stappers.nl>

	* release.xds

	New file, supplied by Jeff Martin.

	* release.dtd

	New file, supplied by Jeff Martin.

2004-02-18  Geert Stappers <stappers@stappers.nl>

	* dispspec-template.xds

	Changed the absolute file path in a URL.

2004-02-09  Geert Stappers <stappers@stappers.nl>

	* New directory

	Start with the versions from the examples directory.